ch4/y.output
State 43 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: expression

    2 expression: INT
    3           | STRING
    4           | lvalue
    5           | NIL
    6           | LPAREN expression_sequence RPAREN
    7           | arithmetic_expression
    8           | selection
    9           | comparison
   10           | boolean
   11           | MINUS expression
   12           | function_cal
   13           | record_creation
   14           | array_creation
   15           | assignment
   16           | loop
   17           | BREAK
   18           | LPAREN RPAREN
   19           | LET declaration_sequence IN END
   20           | LET declaration_sequence IN expression_sequence END

   21 declaration_sequence: /* empty */
   22                     | declaration declaration_sequence

   23 declaration: type_declarations
   24            | var_declaration
   25            | function_declarations

   26 type_declarations: type_declaration
   27                  | type_declaration type_declarations

   28 type_declaration: TYPE ID EQ type

   29 type: ID
   30     | LBRACE tyfields RBRACE
   31     | ARRAY OF ID

   32 tyfields: /* empty */
   33         | type_field_sequence

   34 type_field_sequence: ID COLON ID
   35                    | ID COLON ID COMMA type_field_sequence

   36 var_declaration: VAR ID ASSIGN expression
   37                | VAR ID COLON ID ASSIGN expression

   38 function_declarations: function_declaration
   39                      | function_declaration function_declarations

   40 function_declaration: FUNCTION ID LPAREN tyfields RPAREN EQ expression
   41                     | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ expression

   42 lvalue: ID
   43       | lvalue_

   44 lvalue_: one
   45        | lvalue_ DOT ID
   46        | lvalue_ LBRACK expression RBRACK

   47 one: ID DOT ID
   48    | ID LBRACK expression RBRACK

   49 expression_sequence: expression
   50                    | expression SEMICOLON expression_sequence

   51 arithmetic_expression: expression PLUS expression
   52                      | expression MINUS expression
   53                      | expression TIMES expression
   54                      | expression DIVIDE expression

   55 comparison: expression EQ expression
   56           | expression NEQ expression
   57           | expression GT expression
   58           | expression LT expression
   59           | expression GE expression
   60           | expression LE expression

   61 boolean: expression OR expression
   62        | expression AND expression

   63 selection: IF expression THEN expression ELSE expression
   64          | IF expression THEN expression

   65 function_cal: ID LPAREN expression_list RPAREN

   66 expression_list: /* empty */
   67                | expression
   68                | expression COMMA expression_list

   69 record_creation: ID LBRACE field_list RBRACE

   70 field_list: /* empty */
   71           | ID EQ expression
   72           | ID EQ expression COMMA field_list

   73 array_creation: ID LBRACK expression RBRACK OF expression

   74 assignment: lvalue ASSIGN expression

   75 loop: WHILE expression DO expression
   76     | FOR ID ASSIGN expression TO expression DO expression


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 28 29 31 34 35 36 37 40 41 42 45 47 48 65 69 71 72 73 76
STRING (259) 3
INT (260) 2
COMMA (261) 35 68 72
COLON (262) 34 35 37 41
SEMICOLON (263) 50
LPAREN (264) 6 18 40 41 65
RPAREN (265) 6 18 40 41 65
LBRACK (266) 46 48 73
RBRACK (267) 46 48 73
LBRACE (268) 30 69
RBRACE (269) 30 69
DOT (270) 45 47
PLUS (271) 51
MINUS (272) 11 52
TIMES (273) 53
DIVIDE (274) 54
EQ (275) 28 40 41 55 71 72
NEQ (276) 56
LT (277) 58
LE (278) 60
GT (279) 57
GE (280) 59
AND (281) 62
OR (282) 61
ASSIGN (283) 36 37 74 76
ARRAY (284) 31
IF (285) 63 64
THEN (286) 63 64
ELSE (287) 63
WHILE (288) 75
FOR (289) 76
TO (290) 76
DO (291) 75 76
LET (292) 19 20
IN (293) 19 20
END (294) 19 20
OF (295) 31 73
BREAK (296) 17
NIL (297) 5
FUNCTION (298) 40 41
VAR (299) 36 37
TYPE (300) 28
UMINUS (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
expression (49)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20,
    on right: 1 11 36 37 40 41 46 48 49 50 51 52 53 54 55 56 57 58
    59 60 61 62 63 64 67 68 71 72 73 74 75 76
declaration_sequence (50)
    on left: 21 22, on right: 19 20 22
declaration (51)
    on left: 23 24 25, on right: 22
type_declarations (52)
    on left: 26 27, on right: 23 27
type_declaration (53)
    on left: 28, on right: 26 27
type (54)
    on left: 29 30 31, on right: 28
tyfields (55)
    on left: 32 33, on right: 30 40 41
type_field_sequence (56)
    on left: 34 35, on right: 33 35
var_declaration (57)
    on left: 36 37, on right: 24
function_declarations (58)
    on left: 38 39, on right: 25 39
function_declaration (59)
    on left: 40 41, on right: 38 39
lvalue (60)
    on left: 42 43, on right: 4 74
lvalue_ (61)
    on left: 44 45 46, on right: 43 45 46
one (62)
    on left: 47 48, on right: 44
expression_sequence (63)
    on left: 49 50, on right: 6 20 50
arithmetic_expression (64)
    on left: 51 52 53 54, on right: 7
comparison (65)
    on left: 55 56 57 58 59 60, on right: 9
boolean (66)
    on left: 61 62, on right: 10
selection (67)
    on left: 63 64, on right: 8
function_cal (68)
    on left: 65, on right: 12
expression_list (69)
    on left: 66 67 68, on right: 65 68
record_creation (70)
    on left: 69, on right: 13
field_list (71)
    on left: 70 71 72, on right: 69 72
array_creation (72)
    on left: 73, on right: 14
assignment (73)
    on left: 74, on right: 15
loop (74)
    on left: 75 76, on right: 16


state 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program                go to state 12
    expression             go to state 13
    lvalue                 go to state 14
    lvalue_                go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_cal           go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 1

   42 lvalue: ID .
   47 one: ID . DOT ID
   48    | ID . LBRACK expression RBRACK
   65 function_cal: ID . LPAREN expression_list RPAREN
   69 record_creation: ID . LBRACE field_list RBRACE
   73 array_creation: ID . LBRACK expression RBRACK OF expression

    LPAREN  shift, and go to state 26
    LBRACK  shift, and go to state 27
    LBRACE  shift, and go to state 28
    DOT     shift, and go to state 29

    $default  reduce using rule 42 (lvalue)


state 2

    3 expression: STRING .

    $default  reduce using rule 3 (expression)


state 3

    2 expression: INT .

    $default  reduce using rule 2 (expression)


state 4

    6 expression: LPAREN . expression_sequence RPAREN
   18           | LPAREN . RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 30
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 31
    lvalue                 go to state 14
    lvalue_                go to state 15
    one                    go to state 16
    expression_sequence    go to state 32
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_cal           go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 5

   11 expression: MINUS . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 33
    lvalue                 go to state 14
    lvalue_                go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_cal           go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 6

   63 selection: IF . expression THEN expression ELSE expression
   64          | IF . expression THEN expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 34
    lvalue                 go to state 14
    lvalue_                go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_cal           go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 7

   75 loop: WHILE . expression DO expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 35
    lvalue                 go to state 14
    lvalue_                go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_cal           go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 8

   76 loop: FOR . ID ASSIGN expression TO expression DO expression

    ID  shift, and go to state 36


state 9

   19 expression: LET . declaration_sequence IN END
   20           | LET . declaration_sequence IN expression_sequence END

    FUNCTION  shift, and go to state 37
    VAR       shift, and go to state 38
    TYPE      shift, and go to state 39

    $default  reduce using rule 21 (declaration_sequence)

    declaration_sequence   go to state 40
    declaration            go to state 41
    type_declarations      go to state 42
    type_declaration       go to state 43
    var_declaration        go to state 44
    function_declarations  go to state 45
    function_declaration   go to state 46


state 10

   17 expression: BREAK .

    $default  reduce using rule 17 (expression)


state 11

    5 expression: NIL .

    $default  reduce using rule 5 (expression)


state 12

    0 $accept: program . $end

    $end  shift, and go to state 47


state 13

    1 program: expression .
   51 arithmetic_expression: expression . PLUS expression
   52                      | expression . MINUS expression
   53                      | expression . TIMES expression
   54                      | expression . DIVIDE expression
   55 comparison: expression . EQ expression
   56           | expression . NEQ expression
   57           | expression . GT expression
   58           | expression . LT expression
   59           | expression . GE expression
   60           | expression . LE expression
   61 boolean: expression . OR expression
   62        | expression . AND expression

    PLUS    shift, and go to state 48
    MINUS   shift, and go to state 49
    TIMES   shift, and go to state 50
    DIVIDE  shift, and go to state 51
    EQ      shift, and go to state 52
    NEQ     shift, and go to state 53
    LT      shift, and go to state 54
    LE      shift, and go to state 55
    GT      shift, and go to state 56
    GE      shift, and go to state 57
    AND     shift, and go to state 58
    OR      shift, and go to state 59

    $default  reduce using rule 1 (program)


state 14

    4 expression: lvalue .
   74 assignment: lvalue . ASSIGN expression

    ASSIGN  shift, and go to state 60

    $default  reduce using rule 4 (expression)


state 15

   43 lvalue: lvalue_ .
   45 lvalue_: lvalue_ . DOT ID
   46        | lvalue_ . LBRACK expression RBRACK

    LBRACK  shift, and go to state 61
    DOT     shift, and go to state 62

    $default  reduce using rule 43 (lvalue)


state 16

   44 lvalue_: one .

    $default  reduce using rule 44 (lvalue_)


state 17

    7 expression: arithmetic_expression .

    $default  reduce using rule 7 (expression)


state 18

    9 expression: comparison .

    $default  reduce using rule 9 (expression)


state 19

   10 expression: boolean .

    $default  reduce using rule 10 (expression)


state 20

    8 expression: selection .

    $default  reduce using rule 8 (expression)


state 21

   12 expression: function_cal .

    $default  reduce using rule 12 (expression)


state 22

   13 expression: record_creation .

    $default  reduce using rule 13 (expression)


state 23

   14 expression: array_creation .

    $default  reduce using rule 14 (expression)


state 24

   15 expression: assignment .

    $default  reduce using rule 15 (expression)


state 25

   16 expression: loop .

    $default  reduce using rule 16 (expression)


state 26

   65 function_cal: ID LPAREN . expression_list RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 66 (expression_list)

    expression             go to state 63
    lvalue                 go to state 14
    lvalue_                go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_cal           go to state 21
    expression_list        go to state 64
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 27

   48 one: ID LBRACK . expression RBRACK
   73 array_creation: ID LBRACK . expression RBRACK OF expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 65
    lvalue                 go to state 14
    lvalue_                go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_cal           go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 28

   69 record_creation: ID LBRACE . field_list RBRACE

    ID  shift, and go to state 66

    $default  reduce using rule 70 (field_list)

    field_list  go to state 67


state 29

   47 one: ID DOT . ID

    ID  shift, and go to state 68


state 30

   18 expression: LPAREN RPAREN .

    $default  reduce using rule 18 (expression)


state 31

   49 expression_sequence: expression .
   50                    | expression . SEMICOLON expression_sequence
   51 arithmetic_expression: expression . PLUS expression
   52                      | expression . MINUS expression
   53                      | expression . TIMES expression
   54                      | expression . DIVIDE expression
   55 comparison: expression . EQ expression
   56           | expression . NEQ expression
   57           | expression . GT expression
   58           | expression . LT expression
   59           | expression . GE expression
   60           | expression . LE expression
   61 boolean: expression . OR expression
   62        | expression . AND expression

    SEMICOLON  shift, and go to state 69
    PLUS       shift, and go to state 48
    MINUS      shift, and go to state 49
    TIMES      shift, and go to state 50
    DIVIDE     shift, and go to state 51
    EQ         shift, and go to state 52
    NEQ        shift, and go to state 53
    LT         shift, and go to state 54
    LE         shift, and go to state 55
    GT         shift, and go to state 56
    GE         shift, and go to state 57
    AND        shift, and go to state 58
    OR         shift, and go to state 59

    $default  reduce using rule 49 (expression_sequence)


state 32

    6 expression: LPAREN expression_sequence . RPAREN

    RPAREN  shift, and go to state 70


state 33

   11 expression: MINUS expression .
   51 arithmetic_expression: expression . PLUS expression
   52                      | expression . MINUS expression
   53                      | expression . TIMES expression
   54                      | expression . DIVIDE expression
   55 comparison: expression . EQ expression
   56           | expression . NEQ expression
   57           | expression . GT expression
   58           | expression . LT expression
   59           | expression . GE expression
   60           | expression . LE expression
   61 boolean: expression . OR expression
   62        | expression . AND expression

    $default  reduce using rule 11 (expression)


state 34

   51 arithmetic_expression: expression . PLUS expression
   52                      | expression . MINUS expression
   53                      | expression . TIMES expression
   54                      | expression . DIVIDE expression
   55 comparison: expression . EQ expression
   56           | expression . NEQ expression
   57           | expression . GT expression
   58           | expression . LT expression
   59           | expression . GE expression
   60           | expression . LE expression
   61 boolean: expression . OR expression
   62        | expression . AND expression
   63 selection: IF expression . THEN expression ELSE expression
   64          | IF expression . THEN expression

    PLUS    shift, and go to state 48
    MINUS   shift, and go to state 49
    TIMES   shift, and go to state 50
    DIVIDE  shift, and go to state 51
    EQ      shift, and go to state 52
    NEQ     shift, and go to state 53
    LT      shift, and go to state 54
    LE      shift, and go to state 55
    GT      shift, and go to state 56
    GE      shift, and go to state 57
    AND     shift, and go to state 58
    OR      shift, and go to state 59
    THEN    shift, and go to state 71


state 35

   51 arithmetic_expression: expression . PLUS expression
   52                      | expression . MINUS expression
   53                      | expression . TIMES expression
   54                      | expression . DIVIDE expression
   55 comparison: expression . EQ expression
   56           | expression . NEQ expression
   57           | expression . GT expression
   58           | expression . LT expression
   59           | expression . GE expression
   60           | expression . LE expression
   61 boolean: expression . OR expression
   62        | expression . AND expression
   75 loop: WHILE expression . DO expression

    PLUS    shift, and go to state 48
    MINUS   shift, and go to state 49
    TIMES   shift, and go to state 50
    DIVIDE  shift, and go to state 51
    EQ      shift, and go to state 52
    NEQ     shift, and go to state 53
    LT      shift, and go to state 54
    LE      shift, and go to state 55
    GT      shift, and go to state 56
    GE      shift, and go to state 57
    AND     shift, and go to state 58
    OR      shift, and go to state 59
    DO      shift, and go to state 72


state 36

   76 loop: FOR ID . ASSIGN expression TO expression DO expression

    ASSIGN  shift, and go to state 73


state 37

   40 function_declaration: FUNCTION . ID LPAREN tyfields RPAREN EQ expression
   41                     | FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ expression

    ID  shift, and go to state 74


state 38

   36 var_declaration: VAR . ID ASSIGN expression
   37                | VAR . ID COLON ID ASSIGN expression

    ID  shift, and go to state 75


state 39

   28 type_declaration: TYPE . ID EQ type

    ID  shift, and go to state 76


state 40

   19 expression: LET declaration_sequence . IN END
   20           | LET declaration_sequence . IN expression_sequence END

    IN  shift, and go to state 77


state 41

   22 declaration_sequence: declaration . declaration_sequence

    FUNCTION  shift, and go to state 37
    VAR       shift, and go to state 38
    TYPE      shift, and go to state 39

    $default  reduce using rule 21 (declaration_sequence)

    declaration_sequence   go to state 78
    declaration            go to state 41
    type_declarations      go to state 42
    type_declaration       go to state 43
    var_declaration        go to state 44
    function_declarations  go to state 45
    function_declaration   go to state 46


state 42

   23 declaration: type_declarations .

    $default  reduce using rule 23 (declaration)


state 43

   26 type_declarations: type_declaration .
   27                  | type_declaration . type_declarations

    TYPE  shift, and go to state 39

    TYPE      [reduce using rule 26 (type_declarations)]
    $default  reduce using rule 26 (type_declarations)

    type_declarations  go to state 79
    type_declaration   go to state 43


state 44

   24 declaration: var_declaration .

    $default  reduce using rule 24 (declaration)


state 45

   25 declaration: function_declarations .

    $default  reduce using rule 25 (declaration)


state 46

   38 function_declarations: function_declaration .
   39                      | function_declaration . function_declarations

    FUNCTION  shift, and go to state 37

    FUNCTION  [reduce using rule 38 (function_declarations)]
    $default  reduce using rule 38 (function_declarations)

    function_declarations  go to state 80
    function_declaration   go to state 46


state 47

    0 $accept: program $end .

    $default  accept


state 48

   51 arithmetic_expression: expression PLUS . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 81
    lvalue                 go to state 14
    lvalue_                go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_cal           go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 49

   52 arithmetic_expression: expression MINUS . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 82
    lvalue                 go to state 14
    lvalue_                go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_cal           go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 50

   53 arithmetic_expression: expression TIMES . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 83
    lvalue                 go to state 14
    lvalue_                go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_cal           go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 51

   54 arithmetic_expression: expression DIVIDE . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 84
    lvalue                 go to state 14
    lvalue_                go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_cal           go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 52

   55 comparison: expression EQ . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 85
    lvalue                 go to state 14
    lvalue_                go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_cal           go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 53

   56 comparison: expression NEQ . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
